# atwork-commander

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  LICENSE  README.md  deploy.key.enc  rosconsole.config
atwork_commander/: CMakeLists.txt  package.xml
atwork_commander/config/: Arena.yaml  BTT1.yaml
atwork_commander/launch/: atwork_commander.launch  example_robot.launch  forward.launch  generate.launch  generate_rosbag.launch  load.launch  record_bag.launch  start.launch  stop.launch  store.launch  test_robot.launch
atwork_commander/scripts/: default_bringup
atwork_commander/src/: atwork_refbox_ros_node.cpp  control_node.cpp
atwork_commander/tests/: integration_simple.test  uninit.test
atwork_commander/tests/src/: basic_setup.cpp  uninit.cpp
atwork_commander_com/: CMakeLists.txt  README.md  console.config  package.xml  plugins.xml
atwork_commander_com/include/atwork_commander_com/: plugin_interface.h
atwork_commander_com/launch/: atwork_commander_com-debug.launch  atwork_commander_com.launch  multimaster.launch
atwork_commander_com/src/: ExampleReportGenerator.h  communication_node.cpp  robot_example.cpp  robot_example_arena_centric.cpp  robot_example_object_centric.cpp  ros_com_arena_centric.cpp  ros_com_object_centric.cpp  ros_com_plugin.cpp  server_dummy.cpp
atwork_commander_com/test/common/: test_bmt.bag
atwork_commander_com/test/launch/: example_arena.test  example_robot.test
atwork_commander_core/: CMakeLists.txt  README.md  package.xml  states.dox
atwork_commander_core/include/atwork_commander/: Control.hpp
atwork_commander_core/launch/: atwork_commander_core.launch
atwork_commander_core/src/: atwork_refbox_ros_node.cpp  control.cpp  control_node.cpp
atwork_commander_core/tests/: control.test  external.test
atwork_commander_core/tests/src/: BasicControlTest.hpp  control.cpp  external.cpp
atwork_commander_gen/: CMakeLists.txt  README.md  package.xml  plugins.xml
atwork_commander_gen/common/: DoxyFile
atwork_commander_gen/config/: ATT1.yaml  ATT2.yaml  Arena.yaml  BMT.yaml  BTT1.yaml  BTT2.yaml  BTT3.yaml  FINAL.yaml  PPT.yaml  RTT.yaml  example-arena.yaml  example-task.yaml
atwork_commander_gen/config/BMT/: Arena.yaml  BMT.yaml  BTT1.yaml  BTT2.yaml  FINAL.yaml
atwork_commander_gen/config/BTT/: ATT1.yaml  Arena.yaml  BTT1.yaml  BTT2.yaml
atwork_commander_gen/config/example/: arena.yaml  task.yaml
atwork_commander_gen/include/atwork_commander_gen/: ConfigParserInterface.h  DefaultConfigParser.h  Definitions.h  GeneratorPluginInterface.h  PluginInterface.h  TaskGenerator.h
atwork_commander_gen/launch/: example.launch
atwork_commander_gen/src/: ConfigParser.cpp  ConfigParser.h  DefaultConfigParser.cpp  DefaultConfigParser.h  Definitions.cpp  Error.h  ExampleNode.cpp  Generator.h  SimpleTaskGenerator.cpp  TaskConverter.h  TaskGenerator.cpp  TaskGeneratorImpl.h
atwork_commander_gen/src/jurek/: Generator.cpp  TaskConverter.h
atwork_commander_gen/src/simple/: Generator.cpp
atwork_commander_gen/tests/: JurekGen.cpp  run.test  test-arena.yaml  test-tasks.yaml  tests.cpp
atwork_commander_gui/: CMakeLists.txt  README.md  activateDebug.sh  console.config  deactivateDebug.sh  package.xml  plugin_description.xml
atwork_commander_gui/config/: default.perspective  default.rviz
atwork_commander_gui/launch/: gui.launch
atwork_commander_gui/src/: RefboxStateVisualizer.cpp  RefboxStateVisualizer.h  RefboxStateVisualizer_node.cpp  rviz_plugin.cpp  rviz_plugin.h  task_viz.cpp  task_viz.h  task_viz_node.cpp
atwork_commander_msgs/: CMakeLists.txt  README.md  package.xml
atwork_commander_msgs/msg/: Object.msg  ObjectTask.msg  RefboxState.msg  RobotHeader.msg  RobotState.msg  Task.msg  Transport.msg  Workstation.msg
atwork_commander_msgs/srv/: GenerateTask.srv  LoadTask.srv  StartTask.srv  StateUpdate.srv
atwork_commander_tools/: CMakeLists.txt  package.xml
atwork_commander_tools/src/: main.cpp  referee.py  static_task.py  transport.py
atwork_refbox/: CMakeLists.txt  package.xml
atwork_refbox/config/: BMT.yaml  BNT.yaml  BTT1.yaml  BTT2.yaml  BTT3.yaml  Final.yaml  PPT.yaml  RTT.yaml  ppcavity.yaml
atwork_refbox/launch/: BMT.launch  BTT1.launch  BTT2.launch  PPT.launch
atwork_refbox/src/: listener.cpp  st_viz_tasks.cpp  talker.cpp
atwork_refbox_com/: CMakeLists.txt  package.xml  plugins.xml
atwork_refbox_com/src/: communication_node.cpp  ros_com_plugin.cpp
atwork_refbox_msgs/: CMakeLists.txt  package.xml
atwork_refbox_msgs/msg/: Attentionmsg.msg  BeaconSignal.msg  Int32MultiArray.msg  Object.msg  RobotHeader.msg  RobotState.msg  Task.msg  Workstation.msg  object.msg  robot_state.msg  table.msg
atwork_refbox_msgs/src/: listener.cpp  talker.cpp.autosave
atwork_refbox_msgs/srv/: arena.srv  task.srv
atwork_refbox_ros/: CMakeLists.txt  package.xml
atwork_refbox_ros/config/: Arena.yaml  BMT.yaml  BNT.yaml  BTT1.yaml  BTT2.yaml  BTT3.yaml  Final.yaml  PPT.yaml  RTT.yaml  dump.yaml  ppcavity.yaml
atwork_refbox_ros/launch/: BNT.launch  BTT3.launch  RTT.launch  atwork_refbox_ros.launch  final.launch  forward.launch  generate.launch  ppcavity.launch  stop.launch
atwork_refbox_ros/src/: atwork_refbox_ros_node.cpp  listener.cpp  st_viz_tasks.cpp  talker.cpp
atwork_refbox_ros_com/: CMakeLists.txt  package.xml
atwork_refbox_ros_com/launch/: atwork_refbox_ros_com-debug.launch  atwork_refbox_ros_com.launch
atwork_refbox_ros_com/src/: communication_node.cpp  robot_example.cpp  ros_com_plugin.cpp  server_dummy.cpp
atwork_refbox_ros_msgs/: CMakeLists.txt  package.xml
atwork_refbox_ros_msgs/msg/: BeaconSignal.msg  Object.msg  RefboxState.msg  RobotInfo.msg  RobotState.msg  Task.msg  TaskStatus.msg  Workstation.msg
atwork_refbox_ros_msgs/srv/: Arena.srv  StartTask.srv  tasklist.srv
atwork_refbox_ros_rviz/: CMakeLists.txt  package.xml
atwork_refbox_ros_rviz/launch/: rviz.launch
atwork_refbox_ros_task_generator/: .gitignore  CMakeLists.txt  package.xml
atwork_refbox_task_generator/: CMakeLists.txt  package.xml
docu/: Doxyfile  atwork_refbox_design.graphml  generate.sh  gui_content.graphml
(+21 files in other folders)
